--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-    <a href="#" class="btn btn-info">Test</a>
-  </h1>
+<app-navbar></app-navbar>
+<div class="container main-container">
+  <router-outlet></router-outlet>
 </div>
